Did home work 7

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         </div>
     </div>
     <div class="offer">
-        <div class="offer-photo">
-            <img src="./img/man offer.png" alt="man offer">
-        </div>
+        <img src="./img/man offer.png" alt="man offer" class="offer-photo">
         <div class="offer-text">
             <h1 class="offer-text-start">THE BRAND</h1>
             <h2 class="offer-text-end">OF LUXERIOUS <span class="colour">FASHION</span></h2>
@@ -48,27 +46,27 @@
     </div>
     <div class="categories center">
         <div class="categories-block">
-            <div class="categories-photo">
-                <img src="./img/woman categories.png" alt="woman">
-            </div>
+
+            <img src="./img/woman categories.png" alt="woman" class="categories-photo">
+
             <h3 class="categories-text">30% OFF<br><span class="colour categories-main-text">FOR WOMEN</span> </h3>
         </div>
         <div class="categories-block">
-            <div class="categories-photo">
-                <img src="./img/man categories.png" alt="man">
-            </div>
+
+            <img src="./img/man categories.png" alt="man" class="categories-photo">
+
             <h3 class="categories-text">HOT DEAL<br><span class="colour categories-main-text">FOR MEN</span> </h3>
         </div>
         <div class="categories-block">
-            <div class="categories-photo">
-                <img src="./img/child categories.png" alt="child">
-            </div>
+
+            <img src="./img/child categories.png" alt="child" class="categories-photo">
+
             <h3 class="categories-text">NEW ARRIVALS<br><span class="colour categories-main-text">FOR KIDS</span> </h3>
         </div>
         <div class="categories-block categories-big">
-            <div class="categories-photo">
-                <img src="./img/accesories categories.png" alt="accesories">
-            </div>
+
+            <img src="./img/accesories categories.png" alt="accesories" class="categories-photo">
+
             <h3 class="categories-text">LUXIROUS & TRENDY<br><span class="colour categories-main-text">ACCESORIES</span>
             </h3>
         </div>
@@ -80,32 +78,17 @@
         </div>
         <div class="future-main">
             <div class="future-main-block">
-                <div class="future-main-photo">
-                    <img src="./img/future object 1.png" alt="man">
-                </div>
+                <img src="./img/future object 1.png" alt="man" class="future-main-photo">
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
                     <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
                         Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                     <p class="future-main-text-price">$52.00</p>
                 </div>
-            </div>
-            <div class="future-main-block">
-                <div class="future-main-photo">
-                    <img src="./img/future object 2.png" alt="woman">
-                </div>
-                <div class="future-main-text">
-                    <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
-                    <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
-                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="future-main-text-price">$52.00</p>
-                </div>
-            </div>
-            <div class="future-main-block">
 
-                <div class="future-main-photo">
-                    <img src="./img/future object 3.png" alt="man">
-                </div>
+            </div>
+            <div class="future-main-block">
+                <img src="./img/future object 2.png" alt="woman" class="future-main-photo">
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
                     <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
@@ -114,9 +97,7 @@
                 </div>
             </div>
             <div class="future-main-block">
-                <div class="future-main-photo">
-                    <img src="./img/future object 4.png" alt="man">
-                </div>
+                <img src="./img/future object 3.png" alt="man" class="future-main-photo">
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
                     <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
@@ -125,9 +106,7 @@
                 </div>
             </div>
             <div class="future-main-block">
-                <div class="future-main-photo">
-                    <img src="./img/future object 5.png" alt="man">
-                </div>
+                <img src="./img/future object 4.png" alt="man" class="future-main-photo">
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
                     <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
@@ -136,9 +115,16 @@
                 </div>
             </div>
             <div class="future-main-block">
-                <div class="future-main-photo">
-                    <img src="./img/future object 6.png" alt="man">
+                <img src="./img/future object 5.png" alt="man" class="future-main-photo">
+                <div class="future-main-text">
+                    <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
+                    <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="future-main-text-price">$52.00</p>
                 </div>
+            </div>
+            <div class="future-main-block">
+                <img src="./img/future object 6.png" alt="man" class="future-main-photo">
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
                     <p class="future-main-text-description">Known for her sculptural takes on traditional tailoring,
