--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header center">
         <div class="header-left">
-            <img src="./img/header-left logo.png" alt="logo">
+            <img src="./img/header-left-logo.png" alt="logo">
             <svg class="header__svg" xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 26 27"
                 fill="none">
                 <path
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <section class="offer">
-        <img src="./img/man offer.png" alt="man offer" class="offer-photo block-none">
+        <img src="./img/man-offer.png" alt="man offer" class="offer-photo block-none">
         <div class="offer-text">
             <h1 class="offer-text-start">THE BRAND</h1>
             <h2 class="offer-text-end">OF LUXERIOUS <span class="colour">FASHION</span></h2>
@@ -51,25 +51,25 @@
     <section class="categories center">
         <div class="categories-block">
 
-            <img src="./img/woman categories.png" alt="woman" class="categories-photo">
+            <img src="./img/woman-categories.png" alt="woman" class="categories-photo">
 
             <h3 class="categories-text">30% OFF<br><span class="colour categories-main-text">FOR WOMEN</span> </h3>
         </div>
         <div class="categories-block">
 
-            <img src="./img/man categories.png" alt="man" class="categories-photo">
+            <img src="./img/man-categories.png" alt="man" class="categories-photo">
 
             <h3 class="categories-text">HOT DEAL<br><span class="colour categories-main-text">FOR MEN</span> </h3>
         </div>
         <div class="categories-block">
 
-            <img src="./img/child categories.png" alt="child" class="categories-photo ">
+            <img src="./img/child-categories.png" alt="child" class="categories-photo ">
 
             <h3 class="categories-text">NEW ARRIVALS<br><span class="colour categories-main-text">FOR KIDS</span> </h3>
         </div>
         <div class="categories-block categories-big ">
 
-            <img src="./img/accesories categories.png" alt="accesories" class="categories-photo block-size">
+            <img src="./img/accesories-categories.png" alt="accesories" class="categories-photo block-size">
 
             <h3 class="categories-text">LUXIROUS & TRENDY<br><span class="colour categories-main-text">ACCESORIES</span>
             </h3>
@@ -100,7 +100,7 @@
                             <span>Add to Cart</span>
                         </button>
                     </div>
-                    <img src="./img/future object 1.png" alt="man" class="future-photo">
+                    <img src="./img/future-object-1.png" alt="man" class="future-photo">
                 </div>
 
                 <div class="future-main-text">
@@ -130,7 +130,7 @@
                             <span>Add to Cart</span>
                         </button>
                     </div>
-                    <img src="./img/future object 2.png" alt="woman" class="future-photo">
+                    <img src="./img/future-object-2.png" alt="woman" class="future-photo">
                 </div>
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
@@ -158,7 +158,7 @@
                             <span>Add to Cart</span>
                         </button>
                     </div>
-                    <img src="./img/future object 3.png" alt="man" class="future-photo">
+                    <img src="./img/future-object-3.png" alt="man" class="future-photo">
                 </div>
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
@@ -186,7 +186,7 @@
                             <span>Add to Cart</span>
                         </button>
                     </div>
-                    <img src="./img/future object 4.png" alt="man" class="future-photo">
+                    <img src="./img/future-object-4.png" alt="man" class="future-photo">
                 </div>
 
                 <div class="future-main-text">
@@ -215,7 +215,7 @@
                             <span>Add to Cart</span>
                         </button>
                     </div>
-                    <img src="./img/future object 5.png" alt="man" class="future-photo">
+                    <img src="./img/future-object-5.png" alt="man" class="future-photo">
                 </div>
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
@@ -243,7 +243,7 @@
                             <span>Add to Cart</span>
                         </button>
                     </div>
-                    <img src="./img/future object 6.png" alt="man" class="future-photo">
+                    <img src="./img/future-object-6.png" alt="man" class="future-photo">
                 </div>
                 <div class="future-main-text">
                     <h3 class="future-main-text-title">ELLERY X M'O CAPSULE</h3>
@@ -258,7 +258,7 @@
         </div>
     </section>
     <section class="guaranties center">
-        <article class="guaranties__block">
+        <div class="guaranties__block">
             <svg class="guaranties__block__img" xmlns="http://www.w3.org/2000/svg" width="46" height="32"
                 viewBox="0 0 46 32" fill="none">
                 <path
@@ -268,8 +268,8 @@
             <h3 class="guaranties__block__title">Free Delivery</h3>
             <p class="gurarnties__block__text">Worldwide delivery on all. Authorit tively morph next-generation innov
                 tion with extensive models.</p>
-        </article>
-        <article class="guaranties__block">
+        </div>
+        <div class="guaranties__block">
             <svg class="guaranties__block__img" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                 viewBox="0 0 40 40" fill="none">
                 <path
@@ -279,8 +279,8 @@
             <h3 class="guaranties__block__title">Sales & discounts</h3>
             <p class="gurarnties__block__text">Worldwide delivery on all. Authorit tively morph next-generation innov
                 tion with extensive models.</p>
-        </article>
-        <article class="guaranties__block">
+        </div>
+        <div class="guaranties__block">
             <svg class="guaranties__block__img" xmlns="http://www.w3.org/2000/svg" width="48" height="35"
                 viewBox="0 0 48 35" fill="none">
                 <path
@@ -290,7 +290,7 @@
             <h3 class="guaranties__block__title">Quality assurance</h3>
             <p class="gurarnties__block__text">Worldwide delivery on all. Authorit tively morph next-generation innov
                 tion with extensive models.</p>
-        </article>
+        </div>
     </section>
     <section class="subscription center">
         <div class="subscription__left">
@@ -303,7 +303,7 @@
             <h2 class="subscription__right__title">SUBSCRIBE</h2>
             <h3 class="subscription__right__text">FOR OUR NEW LETTER AND PROMOTION</h3>
             <div class="subscription__right__input">
-                <input class="input_field" type="email" placeholder="Enter Your Email" />
+                <input class="input_field" type="email" placeholder="Enter Your Email">
                 <button class="input_button">Subscribe</button>
             </div>
 
